fixed color block text color not being correct in dark mode

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -139,6 +139,7 @@ main.w-wide { max-width: $w-wide; }
     left: 1rem;
     top: 1rem;
     background-color: #f1f2f3;
+    color: #222222;
     padding: 0.5rem;
     border-radius: #{$border-radius / 2};
   }
